melhorias na tela de configuraçes

--- a/code/frontend/src/app/pages/logged/settings/settings.component.html
+++ b/code/frontend/src/app/pages/logged/settings/settings.component.html
@@ -125,15 +125,17 @@
                 </small>
               </div>
 
-              <div class="setting-toggle">
-                <label>
-                  <input 
-                    type="checkbox" 
-                    formControlName="whatsappAutoReconnectEnabled"
-                  />
-                  <span class="toggle-slider"></span>
-                  Reconexão Automática
-                </label>
+              <div class="setting-toggle-wrapper">
+                <div class="setting-toggle">
+                  <label>
+                    <input 
+                      type="checkbox" 
+                      formControlName="whatsappAutoReconnectEnabled"
+                    />
+                    <span class="toggle-slider"></span>
+                    Reconexão Automática
+                  </label>
+                </div>
                 <small class="field-hint">
                   Ativa reconexão automática quando a conexão WhatsApp for perdida.
                 </small>
