--- a/code/frontend/src/app/pages/logged/settings/settings.component.scss
+++ b/code/frontend/src/app/pages/logged/settings/settings.component.scss
@@ -290,6 +290,23 @@
   border-bottom: none;
 }
 
+.setting-toggle-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 14px 0;
+  border-bottom: 1px solid #F3F4F6;
+}
+
+.setting-toggle-wrapper:last-child {
+  border-bottom: none;
+}
+
+.setting-toggle-wrapper .field-hint {
+  margin-left: 56px;
+  margin-top: -4px;
+}
+
 .setting-toggle {
   display: flex;
   align-items: center;
@@ -300,6 +317,12 @@
   margin: 0 -8px;
   padding-left: 8px;
   padding-right: 8px;
+}
+
+.setting-toggle-wrapper .setting-toggle {
+  padding: 0;
+  border-bottom: none;
+  margin: 0;
 }
 
 .setting-toggle:hover {
