--- a/code/frontend/src/app/views/sidebar/sidebar.html
+++ b/code/frontend/src/app/views/sidebar/sidebar.html
@@ -23,6 +23,18 @@
         </a>
       </li>
       <li *ngIf="currentUser">
+        <a
+          routerLink="/meu-perfil"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{exact: true}"
+          class="nav-link"
+          (click)="close()"
+        >
+          <span class="nav-icon" [innerHTML]="getProfileIcon()" [attr.aria-hidden]="true"></span>
+          <span class="nav-text">Perfil</span>
+        </a>
+      </li>
+      <li *ngIf="currentUser">
         <button
           class="nav-link logout-link"
           (click)="logout(); close()"
@@ -33,25 +45,4 @@
       </li>
     </ul>
   </nav>
-
-  <div class="sidebar-footer" *ngIf="currentUser">
-    <div class="user-info">
-      <img 
-        [src]="userPhotoUrl" 
-        [alt]="currentUser.name || currentUser.username"
-        class="user-avatar"
-        (error)="onImageError($event)"
-      />
-      <div class="user-text">
-        <span class="user-name">{{ currentUser.name || currentUser.username }}</span>
-        <span class="user-profile">{{ currentUser.profileName }}</span>
-      </div>
-    </div>
-    <a routerLink="/meu-perfil" class="btn-edit-profile" (click)="close()">
-      Editar Perfil
-    </a>
-    <button class="btn-logout" (click)="logout()">
-      Sair
-    </button>
-  </div>
 </div>
