--- a/code/frontend/src/app/pages/public/landing/landing.component.html
+++ b/code/frontend/src/app/pages/public/landing/landing.component.html
@@ -19,6 +19,10 @@
       <a routerLink="/atualizar-cadastro" class="link-card">
         <span class="link-text">Atualizar Cadastro</span>
       </a>
+
+      <a routerLink="/emprestimo" class="link-card">
+        <span class="link-text">Empréstimo de Livros</span>
+      </a>
       
       <!-- Login é sempre a última opção -->
       <a routerLink="/login" class="link-card link-card-primary">
