--- a/code/frontend/src/app/pages/public/landing/landing.component.html
+++ b/code/frontend/src/app/pages/public/landing/landing.component.html
@@ -16,12 +16,13 @@
         <span class="link-text">Adicionar Visitantes</span>
       </a>
 
-      <a routerLink="/atualizar-cadastro" class="link-card">
-        <span class="link-text">Atualizar Cadastro</span>
-      </a>
-
       <a routerLink="/emprestimo" class="link-card">
         <span class="link-text">Empréstimo de Livros</span>
+      </a>
+
+      <!-- Atualizar Cadastro é sempre a penultima opção -->
+      <a routerLink="/atualizar-cadastro" class="link-card">
+        <span class="link-text">Atualizar Cadastro</span>
       </a>
       
       <!-- Login é sempre a última opção -->
